--- a/iojs/package.json
+++ b/iojs/package.json
@@ -20,12 +20,8 @@
   "iojs"
 ],
   "dependencies": {
-    "primus": "*",
-    "async": "~0.8.0",
-    "express": "4.2.x",
-    "winston": "git://github.com/flatiron/winston#master",
-    "bigpipe": "bigpipe/pagelet",
-    "plates": "https://github.com/flatiron/plates/tarball/master"
+    "jsdom": "6.1.*",
+    "mongodb": "2.0.*"
   },
   "devDependencies": {
   },
