added echo command

--- a/follow-mp/.ebextensions/cron-file-readable.config
+++ b/follow-mp/.ebextensions/cron-file-readable.config
@@ -1,4 +1,6 @@
 --- 
 container_commands: 
-  cronreadable: 
+  01cronreadable: 
     command: "chmod a+r /var/app/current/cron.yaml"
+  02echo: 
+    command: "echo hello container command"
