changing permission of ondeck instead of current

--- a/follow-mp/.ebextensions/cron-file-readable.config
+++ b/follow-mp/.ebextensions/cron-file-readable.config
@@ -1,6 +1,6 @@
 --- 
 container_commands: 
   01cronreadable: 
-    command: "chmod a+r /var/app/current/cron.yaml"
+    command: "chmod a+r /var/app/ondeck/cron.yaml"
   02echo: 
     command: "echo hello container command"
