--- a/follow-mp/cron.yaml
+++ b/follow-mp/cron.yaml
@@ -2,6 +2,6 @@
 cron: 
   - 
     name: update-votes
-    schedule: "1 */3 * * *"
+    schedule: "0 19 * * *"
     url: /tasks/updateMPVoteRecords
 version: 1
