--- a/follow-mp/.gitignore
+++ b/follow-mp/.gitignore
@@ -20,3 +20,8 @@
 .elasticbeanstalk/*
 !.elasticbeanstalk/*.cfg.yml
 !.elasticbeanstalk/*.global.yml
+
+# Ignoring twitter controller only used locally
+app/controllers/twitter_auth_controller.rb
+test/controllers/twitter_auth_controller_test.rb
+
