--- a/follow-mp/Gemfile
+++ b/follow-mp/Gemfile
@@ -3,7 +3,7 @@ source 'https://rubygems.org'
 
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem 'rails', '4.2.4'
-# Use sqlite3 as the database for Active Record
+# Use mysql as the database for Active Record
 gem 'mysql2'
 # Use SCSS for stylesheets
 gem 'sass-rails', '~> 5.0'
@@ -25,6 +25,9 @@ gem 'jbuilder', '~> 2.0'
 gem 'sdoc', '~> 0.4.0', group: :doc
 # Do inserts all at once
 # gem 'bulk_insert', '~> 1.1.0'
+
+# oauth used for twitter
+gem 'oauth', '~> 0.5', '>=0.5.1'
 
 group :test do
 	# DB apapter
