Added byebug history to ignore

--- a/follow-mp/.gitignore
+++ b/follow-mp/.gitignore
@@ -16,6 +16,9 @@
 !/log/.keep
 /tmp
 
+# Ignore debugging files
+.byebug_history
+
 # Elastic Beanstalk Files
 .elasticbeanstalk/*
 !.elasticbeanstalk/*.cfg.yml
